--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 		<head><title>My Web</title></head>
 		<body><h1>Welcome to staging</h1>
+			<h2>This job runs on staging</h2>
 		</body>
 </html>
