--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 		<head><title>My Web</title></head>
 		<body><h1>Welcome to staging</h1>
 			<h2>This job runs on staging</h2>
+			<h3>------------------------</h3>
+
+			<h1 color="red">A New Dawn!</h1>
 		</body>
 </html>
