--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 		<head><title>Web-CICD</title></head>
 		<body>
 				<h1>Staging Server</h1>
-				<h2>This is our staging node</h2>
+				<h2>This is.. our staging node</h2>
 		</body>
 </html>
