--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 		<body>
 				<h1>Staging Server</h1>
 				<h2>This is.. our staging node</h2>
+				<h2>This server is now running using automated Pipeline</h2>
 		</body>
 </html>
