--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 				<h1>Staging Server</h1>
 				<h2>This is.. our staging node</h2>
 				<h2>This server is now running using automated Pipeline</h2>
+				This is what we are talking about....
+				Is my main website..though just for testing...
 		</body>
 </html>
