--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 		<head><title>Web-CICD</title></head>
 		<body>
-				<h1>Staging Server</h1>
-				<h2>This is.. our staging node</h2>
+				<h1>We are going LIVE! on Production</h1>
 				<h2>This server is now running using automated Pipeline</h2>
-				This is what we are talking about....
 				Is my main website..though just for testing...
 		</body>
 </html>
