--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-	<head><title>My CICD</title></head>
+	<head><title>My CICD</title>
+		<link rel="stylesheet" href="mystyle.css">
+	</head>
 	<body>
-		<h1>My Staging Env</h1>
+		<h1 >My Staging Env</h1>
 	
 	
 	</body>
