--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<link rel="stylesheet" href="mystyle.css">
 	</head>
 	<body>
-		<h1 >My Staging Env</h1>
+		<h1>My Staging Env</h1>
+		<h1>We just started automating our jobs</h1>
 	
 	
 	</body>
